2010-05-21:
    - GaudiPolicy/cmt/requirements: add "use pytools v* LCG_Interfaces" for qmtests
    - GaudiSvc/cmt/requirements, GaudiPolicy/cmt/requirements: remove library_Clinkopts pattern

2010-05-20:
    - cmt/project.cmt: setup_strategy root,no_config

2010-05-17: 
    - Update GAUDI_ATLAS to v20r4p8
    - LCGCMT_56g

2010-05-14:
    - v20r4p8
    - GaudiSvc/THistSvc: use streams as well as TDirectories in getTHists
	                 and getTTrees
	
2010-05-13:
    - update to GaudiPolicy v10r7

2010-05-11:
    - LCG_Configuration-00-56-07

2010-04-28:
    - LCG_Settings-00-56-06

2010-04-20:
    - GaudiSvc/cmt/requirements: remove "use PCRE"
    - same for RootHistCnv, LCG_Configuration

2010-04-01:
    - GaudiPython/python/GaudiPython/Bindings.py: v2.6 compatibility
	( bugs #64571 )
    - LCGCMT_56f

2010-03-30:
    - GaudiPolicy/requirements: remove special behaviour of CERNDISTCC tag in
                                cpp_name, cc_name, for_name
2010-03-12:
    - GaudiSvc/THistSvc: deprecate CompressionLevel jobOption
                       : add CL parameter to Output Property to set compression 
                         level for individual files. 
                       : ugly hack in initialize() to set output level 
	                 immediately
    - LCG_Configuration_00-56-05-08

2010-03-10:
	- GaudiPolicy: update to v10r5
                   requirements: associate tag no-pyzip with ATLAS

2010-03-03:
    - GaudiSvc/THistSvc: fix iterator for large root file
                       : stop job when output file gets too big
                       : make MsgStream member data
    - GaudiKernel/Converter.cpp:  bug #63502: don't assume converter 
        is a ConverterSvc when retrieving name

    - LCG_Configuration-00-56-05-06
    - LCG_Settings-00-56-05-01
      cmt co -r GCCXML-00-56-05 LCG_Interfaces/GCCXML

2010-02-24
    - GaudiKernel/Converter.cpp: bug #63502: don't assume converter 
	is a ConverterSvc when retrieving name

2010-01-27: