@@ -62,11 +62,25 @@ public:
   virtual std::vector<std::string> getTrees() const;
   virtual std::vector<std::string> getGraphs() const;
 
-  virtual StatusCode getTHists(TDirectory *td, TList &) const;
-  virtual StatusCode getTHists(const std::string& name, TList &) const;
+  virtual StatusCode getTHists(TDirectory *td, TList &, 
+			       bool recurse=false) const;
+  virtual StatusCode getTHists(const std::string& name, TList &, 
+			       bool recurse=false) const;
 
-  virtual StatusCode getTTrees(TDirectory *td, TList &) const;
-  virtual StatusCode getTTrees(const std::string& name, TList &) const;
+  virtual StatusCode getTHists(TDirectory *td, TList &tl,
+			       bool recurse=false, bool reg=false);
+  virtual StatusCode getTHists(const std::string& name, TList &tl,
+			       bool recurse=false, bool reg=false);
+
+  virtual StatusCode getTTrees(TDirectory *td, TList &, 
+			       bool recurse=false) const;
+  virtual StatusCode getTTrees(const std::string& name, TList &, 
+			       bool recurse=false) const;
+
+  virtual StatusCode getTTrees(TDirectory *td, TList & tl,
+			       bool recurse=false, bool reg=false);
+  virtual StatusCode getTTrees(const std::string& name, TList & tl,
+			       bool recurse=false, bool reg=false);
 
   virtual bool exists(const std::string& name) const;
 
@@ -184,6 +198,8 @@ private:
   void MergeRootFile( TDirectory *target, TDirectory *source); 
 
   bool signaledStop;
+
+  mutable std::string m_curstream;
 
 };
 
